pod.yaml
apiVersion: v1
kind: Pod
metadata: 
 name: django-todo-pod
 namespace: django-todo-app
spec:
 containers:
    - name: django-todo-ctr
      image: wankhadeaj25/django-app:latest
      ports:
        - containerPort: 8001
